--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="#000"
     tools:context="br.com.leinadlarama.diadobatecabeca.ViewEventActivity"
     tools:showIn="@layout/activity_scrolling">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -18,6 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="#FFF"
         android:text="@string/large_text" />
 
     </LinearLayout>
