--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -42,15 +42,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_scrolling" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/plus" />
+        android:src="@drawable/top_ten"
+        app:layout_anchorGravity="bottom|end"/>
+
+    <include layout="@layout/content_scrolling" />
 
 </android.support.design.widget.CoordinatorLayout>
