--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -21,8 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textSize="16sp"
-        android:textColor="#FFF"
-        android:text="@string/large_text" />
+        android:textColor="#FFF"/>
 
     </LinearLayout>
 
