--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
+    android:id="@+id/mainActivityRoot"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/tilSearchForm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="visible"
             android:textColorHint="#FFF">
 
             <android.support.design.widget.TextInputEditText
@@ -24,6 +28,7 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:drawableRight="@android:drawable/ic_menu_search"
                 android:hint="Pesquisar banda..."
+                android:textIsSelectable="false"
                 android:maxLines="1"
                 android:textColor="#FFF"
                 android:textSize="15sp"
@@ -35,13 +40,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:orientation="vertical">
 
+
         <android.support.v7.widget.RecyclerView
+
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </LinearLayout>
+
 
 </LinearLayout>
