--- a/app/src/main/res/layout/item_lista_view.xml
+++ b/app/src/main/res/layout/item_lista_view.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/titulo"
@@ -29,5 +29,9 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+
+
+
     </LinearLayout>
+
 </LinearLayout>
