--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.leinadlarama.diadobatecabeca.ViewEventActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_item_share"
+        android:actionProviderClass="android.widget.ShareActionProvider"
+        app:showAsAction="ifRoom"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="Compartilhar"/>
 </menu>
