--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -5,26 +5,87 @@
     android:id="@+id/viewRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:background="#000"
     android:layout_marginBottom="50dp"
+    android:background="#000"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="br.com.leinadlarama.diadobatecabeca.ViewEventActivity"
     tools:showIn="@layout/activity_scrolling">
 
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textSize="16sp"
-        android:textColor="#FFF"/>
+        <TextView
+            android:id="@+id/text_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:textColor="#FFF"
+            android:textSize="16sp" />
 
+        <ImageView
+            android:id="@+id/ivFlyer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            />
+
+        <ImageView
+            android:id="@+id/expanded_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_comments"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="@dimen/text_margin"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:layout_marginRight="@dimen/text_margin"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            tools:listitem="@layout/item_comment" />
+
+        <LinearLayout
+            android:id="@+id/comment_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/post_text_layout"
+            android:layout_marginBottom="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginRight="@dimen/text_margin"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:weightSum="1.0">
+
+            <EditText
+                android:id="@+id/etComment"
+                android:layout_width="0dp"
+                android:paddingLeft="5dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
+                android:background="@android:color/white"
+                android:hint="Lets type..."
+                android:maxLines="1" />
+
+            <Button
+                android:background="@drawable/ic_send"
+                android:id="@+id/btPostComment"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="0.1"
+                />
+
+        </LinearLayout>
     </LinearLayout>
+
 
 </android.support.v4.widget.NestedScrollView>
